# Generated by Django 5.2.7 on 2025-11-10 23:13

import appointment.models
import datetime
import django.core.validators
import django.db.models.deletion
import phonenumber_field.modelfields
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='AppointmentRequest',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('date', models.DateField(help_text='The date of the appointment request.', verbose_name='Date')),
                ('start_time', models.TimeField(help_text='The start time of the appointment request.', verbose_name='Start Time')),
                ('end_time', models.TimeField(help_text='The end time of the appointment request.', verbose_name='End Time')),
                ('payment_type', models.CharField(choices=[('full', 'Full payment'), ('down', 'Down payment')], default='full', max_length=4, verbose_name='Payment Type')),
                ('id_request', models.CharField(blank=True, max_length=100, null=True, verbose_name='Request ID')),
                ('reschedule_attempts', models.PositiveIntegerField(default=0, help_text='Number of times this appointment has been rescheduled.', verbose_name='Reschedule Attempts')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created At')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated At')),
            ],
            options={
                'verbose_name': 'Appointment Request',
                'verbose_name_plural': 'Appointment Requests',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Config',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('slot_duration', models.PositiveIntegerField(help_text='Minimum time for an appointment in minutes, recommended 30.', null=True, verbose_name='Slot Duration')),
                ('lead_time', models.TimeField(help_text='Time when we start working.', null=True, verbose_name='Lead Time')),
                ('finish_time', models.TimeField(help_text='Time when we stop working.', null=True, verbose_name='Finish Time')),
                ('appointment_buffer_time', models.FloatField(help_text="Time between now and the first available slot for the current day (doesn't affect tomorrow).", null=True, verbose_name='Appointment Buffer Time')),
                ('website_name', models.CharField(default='', help_text='Name of your website.', max_length=255, verbose_name='Website Name')),
                ('app_offered_by_label', models.CharField(default='Offered by', help_text='Label for `Offered by` on the appointment page', max_length=255, verbose_name='`Offered by` Label')),
                ('default_reschedule_limit', models.PositiveIntegerField(default=3, help_text='Default maximum number of times an appointment can be rescheduled across all services.', verbose_name='Default Reschedule Limit')),
                ('allow_staff_change_on_reschedule', models.BooleanField(default=True, help_text='Allows clients to change the staff member when rescheduling an appointment.', verbose_name='Allow Staff Change on Reschedule')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created At')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated At')),
            ],
            options={
                'verbose_name': 'Config',
                'verbose_name_plural': 'Configs',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Appointment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('phone', phonenumber_field.modelfields.PhoneNumberField(blank=True, max_length=128, region=None, verbose_name='Phone Number')),
                ('address', models.CharField(blank=True, default='', help_text='Does not have to be specific, just the city and the state', max_length=255, null=True, verbose_name='Address')),
                ('want_reminder', models.BooleanField(default=False, help_text='Indicates whether the client wants a reminder for the appointment.', verbose_name='Want Reminder')),
                ('additional_info', models.TextField(blank=True, help_text='Any additional information the client wants to provide for the appointment.', null=True, verbose_name='Additional Info')),
                ('paid', models.BooleanField(default=False, help_text='Indicates whether the appointment has been paid for.', verbose_name='Paid')),
                ('amount_to_pay', models.DecimalField(blank=True, decimal_places=2, help_text='The amount to be paid for the appointment. If 0, it means the appointment is free or already paid.', max_digits=10, null=True, verbose_name='Amount to Pay')),
                ('id_request', models.CharField(blank=True, max_length=100, null=True, verbose_name='Request ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created At')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated At')),
                ('client', models.ForeignKey(help_text='The user who made the appointment request.', null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL, verbose_name='Client')),
                ('appointment_request', models.OneToOneField(help_text='The appointment request made by the client.', on_delete=django.db.models.deletion.CASCADE, to='appointment.appointmentrequest', verbose_name='Appointment Request')),
            ],
            options={
                'verbose_name': 'Appointment',
                'verbose_name_plural': 'Appointments',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='EmailVerificationCode',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('code', models.CharField(help_text="The verification code sent to the user's email.", max_length=6, verbose_name='Verification Code')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created At')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated At')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL, verbose_name='User')),
            ],
            options={
                'verbose_name': 'Email Verification Code',
                'verbose_name_plural': 'Email Verification Codes',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='PasswordResetToken',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('token', models.UUIDField(default=uuid.uuid4, editable=False, unique=True, verbose_name='Token')),
                ('expires_at', models.DateTimeField(verbose_name='Expires At')),
                ('status', models.CharField(choices=[('active', 'Active'), ('verified', 'Verified'), ('invalidated', 'Invalidated')], default='active', max_length=11, verbose_name='Status')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created At')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated At')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='password_reset_tokens', to=settings.AUTH_USER_MODEL, verbose_name='User')),
            ],
            options={
                'verbose_name': 'Password Reset Token',
                'verbose_name_plural': 'Password Reset Tokens',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='PaymentInfo',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created At')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated At')),
                ('appointment', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='appointment.appointment', verbose_name='Appointment')),
            ],
            options={
                'verbose_name': 'Payment Info',
                'verbose_name_plural': 'Payment Infos',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Service',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100, verbose_name='Name')),
                ('description', models.TextField(blank=True, null=True, verbose_name='Description')),
                ('duration', models.DurationField(validators=[django.core.validators.MinValueValidator(datetime.timedelta(seconds=1))], verbose_name='Duration')),
                ('price', models.DecimalField(decimal_places=2, max_digits=8, validators=[django.core.validators.MinValueValidator(0)], verbose_name='Price')),
                ('down_payment', models.DecimalField(decimal_places=2, default=0, max_digits=6, validators=[django.core.validators.MinValueValidator(0)], verbose_name='Down Payment')),
                ('image', models.ImageField(blank=True, null=True, upload_to='services/', verbose_name='Image')),
                ('currency', models.CharField(default='USD', max_length=3, validators=[django.core.validators.MaxLengthValidator(3), django.core.validators.MinLengthValidator(3)], verbose_name='Currency')),
                ('background_color', models.CharField(blank=True, default=appointment.models.generate_rgb_color, max_length=50, null=True, verbose_name='Background Color')),
                ('reschedule_limit', models.PositiveIntegerField(default=0, help_text='Maximum number of times an appointment can be rescheduled.', verbose_name='Reschedule limit')),
                ('allow_rescheduling', models.BooleanField(default=False, help_text='Indicates whether appointments for this service can be rescheduled.', verbose_name='Allow Rescheduling')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created At')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated At')),
            ],
            options={
                'verbose_name': 'Service',
                'verbose_name_plural': 'Services',
                'ordering': ['name'],
                'indexes': [models.Index(fields=['name'], name='appointment_name_c25ec8_idx'), models.Index(fields=['price'], name='appointment_price_0f5143_idx')],
            },
        ),
        migrations.AddField(
            model_name='appointmentrequest',
            name='service',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='appointment.service', verbose_name='Service'),
        ),
        migrations.CreateModel(
            name='StaffMember',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('slot_duration', models.PositiveIntegerField(blank=True, help_text='Minimum time for an appointment in minutes, recommended 30.', null=True, verbose_name='Slot Duration')),
                ('lead_time', models.TimeField(blank=True, help_text='Time when the staff member starts working.', null=True, verbose_name='Lead Time')),
                ('finish_time', models.TimeField(blank=True, help_text='Time when the staff member stops working.', null=True, verbose_name='Finish Time')),
                ('appointment_buffer_time', models.FloatField(blank=True, help_text="Time between now and the first available slot for the current day (doesn't affect tomorrow). e.g: If you start working at 9:00 AM and the current time is 8:30 AM and you set it to 30 minutes, the first available slot will be at 9:00 AM. If you set the appointment buffer time to 60 minutes, the first available slot will be at 9:30 AM.", null=True, verbose_name='Appointment Buffer Time')),
                ('work_on_saturday', models.BooleanField(default=False, help_text='Indicates whether this staff member works on Saturdays.', verbose_name='Work on Saturday')),
                ('work_on_sunday', models.BooleanField(default=False, help_text='Indicates whether this staff member works on Sundays.', verbose_name='Work on Sunday')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created At')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated At')),
                ('services_offered', models.ManyToManyField(help_text='Services that this staff member provides.', to='appointment.service', verbose_name='Services Offered')),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL, verbose_name='User')),
            ],
            options={
                'verbose_name': 'Staff Member',
                'verbose_name_plural': 'Staff Members',
                'ordering': ['user__first_name', 'user__last_name'],
            },
        ),
        migrations.CreateModel(
            name='DayOff',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('start_date', models.DateField(verbose_name='Start Date')),
                ('end_date', models.DateField(verbose_name='End Date')),
                ('description', models.CharField(blank=True, max_length=255, null=True, verbose_name='Description')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created At')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated At')),
                ('staff_member', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='appointment.staffmember', verbose_name='Staff Member')),
            ],
            options={
                'verbose_name': 'Day Off',
                'verbose_name_plural': 'Days Off',
                'ordering': ['-start_date'],
            },
        ),
        migrations.CreateModel(
            name='AppointmentRescheduleHistory',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('date', models.DateField(help_text='The previous date of the appointment before it was rescheduled.', verbose_name='Date')),
                ('start_time', models.TimeField(help_text='The previous start time of the appointment before it was rescheduled.', verbose_name='Start Time')),
                ('end_time', models.TimeField(help_text='The previous end time of the appointment before it was rescheduled.', verbose_name='End Time')),
                ('reason_for_rescheduling', models.TextField(blank=True, help_text='Reason for the appointment reschedule.', null=True, verbose_name='Reason for Rescheduling')),
                ('reschedule_status', models.CharField(choices=[('pending', 'Pending'), ('confirmed', 'Confirmed')], default='pending', help_text='Indicates the status of the reschedule action.', max_length=10, verbose_name='Reschedule Status')),
                ('id_request', models.CharField(blank=True, max_length=100, null=True, verbose_name='Request ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, help_text='The date and time the reschedule was recorded.', verbose_name='Created At')),
                ('updated_at', models.DateTimeField(auto_now=True, help_text='The date and time the reschedule was confirmed.', verbose_name='Updated At')),
                ('appointment_request', models.ForeignKey(help_text='The appointment request made by a client.', on_delete=django.db.models.deletion.CASCADE, related_name='reschedule_histories', to='appointment.appointmentrequest', verbose_name='Appointment Request')),
                ('staff_member', models.ForeignKey(help_text='The previous staff member of the appointment before it was rescheduled.', null=True, on_delete=django.db.models.deletion.SET_NULL, to='appointment.staffmember', verbose_name='Staff Member')),
            ],
            options={
                'verbose_name': 'Appointment Reschedule History',
                'verbose_name_plural': 'Appointment Reschedule Histories',
                'ordering': ['-created_at'],
            },
        ),
        migrations.AddField(
            model_name='appointmentrequest',
            name='staff_member',
            field=models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, to='appointment.staffmember', verbose_name='Staff Member'),
        ),
        migrations.CreateModel(
            name='WorkingHours',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('day_of_week', models.PositiveIntegerField(choices=[(0, 'Sunday'), (1, 'Monday'), (2, 'Tuesday'), (3, 'Wednesday'), (4, 'Thursday'), (5, 'Friday'), (6, 'Saturday')], verbose_name='Day of Week')),
                ('start_time', models.TimeField(verbose_name='Start Time')),
                ('end_time', models.TimeField(verbose_name='End Time')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created At')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated At')),
                ('staff_member', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='appointment.staffmember', verbose_name='Staff Member')),
            ],
            options={
                'verbose_name': 'Working Hour',
                'verbose_name_plural': 'Working Hours',
                'ordering': ['day_of_week', 'start_time'],
            },
        ),
        migrations.AddIndex(
            model_name='appointment',
            index=models.Index(fields=['client', '-created_at'], name='appointment_client__b0d651_idx'),
        ),
        migrations.AddConstraint(
            model_name='appointment',
            constraint=models.CheckConstraint(condition=models.Q(('amount_to_pay__gte', 0)), name='positive_amount_to_pay'),
        ),
        migrations.AddIndex(
            model_name='appointmentrequest',
            index=models.Index(fields=['date', 'start_time'], name='appointment_date_eff862_idx'),
        ),
        migrations.AddIndex(
            model_name='appointmentrequest',
            index=models.Index(fields=['staff_member', 'date'], name='appointment_staff_m_13c670_idx'),
        ),
        migrations.AddConstraint(
            model_name='workinghours',
            constraint=models.CheckConstraint(condition=models.Q(('start_time__lt', models.F('end_time'))), name='start_time_before_end_time'),
        ),
        migrations.AlterUniqueTogether(
            name='workinghours',
            unique_together={('staff_member', 'day_of_week')},
        ),
    ]
